--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,26 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  # Firebase dependencies (REMOVE THESE):
-  # firebase_core: ^3.13.1
-  # firebase_auth: ^5.1.0
-  # cloud_firestore: ^5.0.0
-  # firebase_storage: ^12.4.6
 
-  # Supabase dependencies (ADD THESE):
+
+  # Supabase dependencies:
   supabase_flutter: ^2.5.0 # Use the latest stable version
 
-  image_picker: ^1.1.2 # Keep image_picker for selecting images
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+# Configuration for flutter_launcher_icons
+flutter_launcher_icons:
+  android: "launcher_icon" # Or your preferred icon name
+  ios: true
+  image_path: "assets/images/logo.png" # Make sure this path is correct for your logo image
+  min_sdk_android: 21 # Set to your project's minSdk (usually 21 or higher)
+  remove_alpha_ios: true # Recommended for iOS if your logo has transparency
 
 flutter:
   uses-material-design: true
@@ -36,7 +41,7 @@ flutter:
     - assets/images/breakfast.jpg
     - assets/images/coupons 50 points.jpeg
     - assets/images/free parking 10 points.jpg
-    - assets/images/logo.png
+    - assets/images/logo.png # Ensure this is the correct path to your logo for the app icon
     - assets/images/new member point 50.jpeg
     - assets/images/profile.jpg
     - assets/images/rate.jpeg
